Update memorial section for deceased name

--- a/imsakiya-ramadan-1447-sect.html
+++ b/imsakiya-ramadan-1447-sect.html
@@ -118,7 +118,7 @@ margin-top:15px
 
 <div class="memorial">
 <div>الفاتحة على روح الشهيد</div>
-<strong>أمان عبدالجبار عبدالرضا</strong>
+<strong>اسم المتوفي  </strong>
 </div>
 
 <select id="sect">
